--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
-
 body {
-  font-family: 'Amatic SC' !important;
-  padding: 0;
-  margin: 0;
+  height: 100%;
+  letter-spacing: 0;
+}
+
+html {
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  text-size-adjust: 100%;
+  color-scheme: light;
+}
+
+#__next {
+  height: 100vh;
+  position: relative;
 }
