--- a/styles/index.css
+++ b/styles/index.css
@@ -14,3 +14,14 @@ html {
   height: 100vh;
   position: relative;
 }
+
+.grid-overwrites {
+  flex-grow: 1;
+  max-width: inherit;
+}
+
+.showVideo {
+  max-width: 100%;
+  flex-basis: 100%;
+  height: 52vh;
+}
